# valoruf

./: .gitignore  Dockerfile  LICENSE  app.py  docker-compose.yml  pyproject.toml  tailwind.config.js  uf_api.py  uf_cache.csv
static/: app.js  index.html  styles.css
templates/: index.html
